--- a/Template/pom.xml
+++ b/Template/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>template</artifactId>
+    <artifactId>template-method-pattern</artifactId>
 
     <properties>
         <maven.compiler.source>22</maven.compiler.source>
